fixed alignment of the main page

--- a/source/sass/blocks/benefits-list.scss
+++ b/source/sass/blocks/benefits-list.scss
@@ -110,7 +110,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 22px;
-  margin: 23px auto 52px;
+  margin: 22px auto 52px;
   padding: 0;
   list-style-type: none;
 
@@ -286,5 +286,8 @@
   border: none;
   width: 100%;
   object-fit: cover;
-  height: 256px;
+
+  @media (min-width: $tablet-width) {
+    height: 256px;
+  }
 }
