--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -13,12 +13,13 @@
 .main-footer__text {
   @include text-bolt-m;
   text-align: center;
-  margin-top: 28.5px;
+  // margin-top: 28.5px;
+  margin-top: 37.5px;
   margin-bottom: 33.5px;
 }
 
 .main-footer__developed {
-  margin-top: 40px;
+  margin-top: 34px;
   margin-bottom: 22.9px;
 }
 
@@ -36,13 +37,13 @@
   }
 
   .main-footer__developed {
-    margin-bottom: 36.9px;
-    margin-right: 2px;
+    margin-bottom: 31.9px;
+    margin-right: 3px;
   }
 
   .main-footer__text {
-    margin-bottom: 26.5px;
-    margin-left: 3px;
+    margin-bottom: 32.5px;
+    margin-left: 5px;
   }
 }
 
