--- a/source/sass/blocks/search-hotel.scss
+++ b/source/sass/blocks/search-hotel.scss
@@ -5,8 +5,8 @@
 }
 
 .search-hotel__heading {
-  margin-top: 38px;
-  margin-bottom: 19px;
+  margin-top: 41px;
+  margin-bottom: 23px;
   text-transform: uppercase;
 }
 
